--- a/package.json
+++ b/package.json
@@ -1,41 +1,52 @@
 {
-  "name": "paye-ton-kawa-api-node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "commonjs",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "npx nodemon"
-  },
-  "author": "",
-  "license": "ISC",
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
+    "name": "paye-ton-kawa-api-node",
+    "version": "1.0.0",
+    "private": true,
+    "engines": {
+        "node": "18.13.0",
+        "npm": "8.19.3"
+    },
+    "scripts": {
+        "start": "npm run build && node ./bin/www",
+        "dev": "nodemon app.ts",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "tsc",
+        "lint": "eslint --ext .ts .",
+        "lint:fix": "eslint --ext .ts . --fix",
+        "pq": "pretty-quick",
+        "lint-staged": "lint-staged"
+    },
+    "lint-staged": {
+        "**/*.ts": [
+            "eslint --fix",
+            "pretty-quick --staged"
+        ],
+        "**/*.{md,css}": "pretty-quick --staged"
+    },
+    "dependencies": {
+        "cookie-parser": "1.4.4",
+        "cors": "2.8.5",
+        "debug": "2.6.9",
+        "express": "4.16.1",
+        "morgan": "1.9.1",
+        "ts-node": "10.9.1",
+        "typescript": "4.9.4",
+        "swagger-ui-express": "^4.6.0"
+    },
+    "devDependencies": {
+        "@types/cookie-parser": "1.4.3",
+        "@types/cors": "^2.8.13",
+        "@types/express": "4.17.15",
+        "@types/morgan": "1.9.4",
+        "@typescript-eslint/eslint-plugin": "5.48.1",
+        "@typescript-eslint/parser": "5.48.1",
+        "@types/swagger-ui-express": "^4.1.3",
+        "eslint": "8.31.0",
+        "husky": "8.0.3",
+        "jest": "29.3.1",
+        "lint-staged": "13.1.0",
+        "nodemon": "2.0.20",
+        "prettier": "2.8.2",
+        "pretty-quick": "3.1.3"
     }
-  },
-  "dependencies": {
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "morgan": "^1.10.0",
-    "node-fetch": "^2.6.7",
-    "swagger-ui-express": "^4.6.0",
-    "typescript": "^4.9.5"
-  },
-  "devDependencies": {
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/morgan": "^1.9.4",
-    "@types/node": "^18.13.0",
-    "@types/node-fetch": "^2.6.2",
-    "@types/swagger-ui-express": "^4.1.3",
-    "husky": "^8.0.3",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.8.4",
-    "pretty-quick": "^3.1.3",
-    "ts-node": "^10.9.1"
-  }
 }
