--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "node": "18.13.0",
         "npm": "8.19.3"
     },
+
     "type": "module",
     "scripts": {
         "start": "npm run build && node ./dist/index.js",
@@ -52,14 +53,14 @@
         "@typescript-eslint/eslint-plugin": "5.48.1",
         "@typescript-eslint/parser": "5.48.1",
         "babel-jest": "29.4.3",
-        "eslint": "8.31.0",
-        "husky": "8.0.3",
-        "jest": "29.3.1",
-        "lint-staged": "13.1.0",
-        "nodemon": "2.0.20",
-        "prettier": "2.8.2",
-        "pretty-quick": "3.1.3",
-        "supertest": "6.3.3",
-        "ts-jest": "29.0.5"
+        "cookie-parser": "1.4.4",
+        "cors": "2.8.5",
+        "debug": "2.6.9",
+        "express": "4.16.1",
+        "morgan": "1.9.1",
+        "ts-node": "10.9.1",
+        "jsonwebtoken": "^9.0.0",
+        "typescript": "4.9.4",
+        "swagger-ui-express": "^4.6.0"
     }
   }
