--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -13,8 +13,6 @@ jobs:
     strategy:
       matrix:
         node-version: [18.13.0]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js 18.13.0
@@ -24,4 +22,4 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm run test:no-reloading
+    - run: npm run test:coverage
