--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "scripts": {
         "start": "npm run build && node ./bin/www",
         "dev": "nodemon app.ts",
-        "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc",
         "lint": "eslint --ext .ts .",
         "lint:fix": "eslint --ext .ts . --fix",
         "pq": "pretty-quick",
-        "lint-staged": "lint-staged"
+        "lint-staged": "lint-staged",
+        "test": "jest --watchAll",
+        "test:coverage": "jest --coverage"
     },
     "lint-staged": {
         "**/*.ts": [
@@ -34,19 +35,25 @@
         "swagger-ui-express": "^4.6.0"
     },
     "devDependencies": {
+        "@jest/globals": "29.4.3",
         "@types/cookie-parser": "1.4.3",
         "@types/cors": "^2.8.13",
         "@types/express": "4.17.15",
+        "@types/jest": "29.4.0",
         "@types/morgan": "1.9.4",
+        "@types/supertest": "2.0.12",
         "@typescript-eslint/eslint-plugin": "5.48.1",
         "@typescript-eslint/parser": "5.48.1",
         "@types/swagger-ui-express": "^4.1.3",
+        "babel-jest": "29.4.3",
         "eslint": "8.31.0",
         "husky": "8.0.3",
         "jest": "29.3.1",
         "lint-staged": "13.1.0",
         "nodemon": "2.0.20",
         "prettier": "2.8.2",
-        "pretty-quick": "3.1.3"
+        "pretty-quick": "3.1.3",
+        "supertest": "6.3.3",
+        "ts-jest": "29.0.5"
     }
 }
