--- a/.github/workflows/master-ci.yml
+++ b/.github/workflows/master-ci.yml
@@ -3,8 +3,6 @@ name: master-workflow
 on:
   push:
     branches: ["master"]
-  pull_request:
-    branches: ["master"]
 
 jobs:
   build:
@@ -12,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [18.13.0]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -24,7 +22,7 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build --if-present
-      - run: npm run test:no-reloading
+      - run: npm run test:coverage
 
   deploy:
     needs: build
