--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Use Node.js 18.13.0
       uses: actions/setup-node@v3
       with:
-        node-version: 18.13.0
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
