--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "swagger-ui-express": "^4.6.0"
     },
     "devDependencies": {
+        "@babel/preset-env": "7.20.2",
         "@jest/globals": "29.4.3",
         "@types/cookie-parser": "1.4.3",
         "@types/cors": "^2.8.13",
