--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -34,6 +34,10 @@ jobs:
         continue-on-error: true
         run: npm list
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.13.0'
+
       - name: Install dependencies
         run: npm install
       - name: Building..
