--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "npx nodemon"
@@ -19,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.7",
     "swagger-ui-express": "^4.6.0",
     "typescript": "^4.9.5"
   },
@@ -28,6 +30,7 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.13.0",
+    "@types/node-fetch": "^2.6.2",
     "@types/swagger-ui-express": "^4.1.3",
     "husky": "^8.0.3",
     "nodemon": "^2.0.20",
