--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
         "node": "18.13.0",
         "npm": "8.19.3"
     },
+    "type": "module",
     "scripts": {
-        "start": "npm run build && node ./bin/www",
-        "dev": "nodemon app.ts",
+        "start": "npm run build && node ./dist/index.js",
+        "dev": "nodemon index.ts",
         "build": "tsc",
         "lint": "eslint --ext .ts .",
         "lint:fix": "eslint --ext .ts . --fix",
@@ -25,14 +26,16 @@
         "**/*.{md,css}": "pretty-quick --staged"
     },
     "dependencies": {
+        "axios": "1.3.3",
         "cookie-parser": "1.4.4",
         "cors": "2.8.5",
         "debug": "2.6.9",
         "express": "4.16.1",
         "morgan": "1.9.1",
+        "node-fetch": "3.3.0",
+        "swagger-ui-express": "^4.6.0",
         "ts-node": "10.9.1",
-        "typescript": "4.9.4",
-        "swagger-ui-express": "^4.6.0"
+        "typescript": "4.9.4"
     },
     "devDependencies": {
         "@babel/preset-env": "7.20.2",
@@ -43,9 +46,9 @@
         "@types/jest": "29.4.0",
         "@types/morgan": "1.9.4",
         "@types/supertest": "2.0.12",
+        "@types/swagger-ui-express": "^4.1.3",
         "@typescript-eslint/eslint-plugin": "5.48.1",
         "@typescript-eslint/parser": "5.48.1",
-        "@types/swagger-ui-express": "^4.1.3",
         "babel-jest": "29.4.3",
         "eslint": "8.31.0",
         "husky": "8.0.3",
