--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
         "node": "18.13.0",
         "npm": "8.19.3"
     },
-
     "type": "module",
     "scripts": {
         "start": "npm run build && node ./dist/index.js",
@@ -31,7 +30,7 @@
         "cookie-parser": "1.4.4",
         "cors": "2.8.5",
         "debug": "2.6.9",
-      "jsonwebtoken": "^9.0.0",
+        "jsonwebtoken": "^9.0.0",
         "express": "4.16.1",
         "morgan": "1.9.1",
         "node-fetch": "3.3.0",
@@ -45,7 +44,7 @@
         "@types/cookie-parser": "1.4.3",
         "@types/cors": "^2.8.13",
         "@types/express": "4.17.15",
-      "@types/jsonwebtoken": "^9.0.1",
+        "@types/jsonwebtoken": "^9.0.1",
         "@types/jest": "29.4.0",
         "@types/morgan": "1.9.4",
         "@types/supertest": "2.0.12",
@@ -58,9 +57,10 @@
         "debug": "2.6.9",
         "express": "4.16.1",
         "morgan": "1.9.1",
+        "node-fetch": "3.3.0",
+        "swagger-ui-express": "^4.6.0",
         "ts-node": "10.9.1",
-        "jsonwebtoken": "^9.0.0",
+        "jsonwebtoken": "9.0.0",
         "typescript": "4.9.4",
-        "swagger-ui-express": "^4.6.0"
     }
   }
