--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "cookie-parser": "1.4.4",
         "cors": "2.8.5",
         "debug": "2.6.9",
+      "jsonwebtoken": "^9.0.0",
         "express": "4.16.1",
         "morgan": "1.9.1",
         "node-fetch": "3.3.0",
@@ -43,6 +44,7 @@
         "@types/cookie-parser": "1.4.3",
         "@types/cors": "^2.8.13",
         "@types/express": "4.17.15",
+      "@types/jsonwebtoken": "^9.0.1",
         "@types/jest": "29.4.0",
         "@types/morgan": "1.9.4",
         "@types/supertest": "2.0.12",
@@ -60,4 +62,4 @@
         "supertest": "6.3.3",
         "ts-jest": "29.0.5"
     }
-}
+  }
