--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
         "cookie-parser": "1.4.4",
         "cors": "2.8.5",
         "debug": "2.6.9",
-        "jsonwebtoken": "^9.0.0",
         "express": "4.16.1",
         "morgan": "1.9.1",
         "node-fetch": "3.3.0",
         "swagger-ui-express": "^4.6.0",
         "ts-node": "10.9.1",
+        "jsonwebtoken": "9.0.0",
         "typescript": "4.9.4"
     },
     "devDependencies": {
