--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -4,11 +4,9 @@ on:
     push:
         branches-ignore:
             - master
-
 jobs:
     build:
         runs-on: ubuntu-latest
-
         strategy:
             matrix:
                 node-version: [18.13.0]
@@ -20,7 +18,6 @@ jobs:
               env:
                   cache-name: cache-node-modules
               with:
-                  # npm cache files are stored in `~/.npm` on Linux/macOS
                   path: ~/.npm
                   key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
                   restore-keys: |
@@ -28,64 +25,25 @@ jobs:
                       ${{ runner.os }}-build-
                       ${{ runner.os }}-
 
-<<<<<<< HEAD
-    strategy:
-      matrix:
-        node-version: [18.13.0]
-    steps:
-<<<<<<< HEAD
-      - uses: actions/checkout@v3
-      - name: Cache node modules
-        id: cache-npm
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-=======
             - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
               name: List the state of node modules
               continue-on-error: true
               run: npm list
->>>>>>> 2a0ac3f (rebase)
 
             - uses: actions/setup-node@v3
               with:
                   node-version: '18.13.0'
 
-<<<<<<< HEAD
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.13.0'
-
-      - name: Install dependencies
-        run: npm install
-      - name: Building..
-        run: npm run build --if-present
-      - name: Run tests
-        run: npm run test:coverage
-=======
-    - uses: actions/checkout@v3
-    - name: Use Node.js 18.13.0
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18.13.0
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm run test:coverage
->>>>>>> 48dedb3 (add tests)
-=======
             - name: Install dependencies
               run: npm install
-            - name: Building..
-              run: npm run build --if-present
             - name: Run tests
               run: npm run test:coverage
->>>>>>> 2a0ac3f (rebase)
+            - name: Building..
+              run: npm run build --if-present
+            - name: GitHub Checks
+              uses: LouisBrunner/checks-action@v1.6.0
+              if: always()
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
+                  name: Status
+                  conclusion: ${{ job.status }}
