--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
         "axios": "1.3.3",
         "cookie-parser": "1.4.4",
         "cors": "2.8.5",
-        "debug": "2.6.9",
         "express": "4.16.1",
+        "jsonwebtoken": "9.0.0",
         "morgan": "1.9.1",
         "node-fetch": "3.3.0",
         "swagger-ui-express": "^4.6.0",
         "ts-node": "10.9.1",
-        "jsonwebtoken": "9.0.0",
         "typescript": "4.9.4"
     },
     "devDependencies": {
@@ -44,8 +43,8 @@
         "@types/cookie-parser": "1.4.3",
         "@types/cors": "^2.8.13",
         "@types/express": "4.17.15",
-        "@types/jsonwebtoken": "^9.0.1",
         "@types/jest": "29.4.0",
+        "@types/jsonwebtoken": "^9.0.1",
         "@types/morgan": "1.9.4",
         "@types/supertest": "2.0.12",
         "@types/swagger-ui-express": "^4.1.3",
@@ -54,13 +53,15 @@
         "babel-jest": "29.4.3",
         "cookie-parser": "1.4.4",
         "cors": "2.8.5",
-        "debug": "2.6.9",
         "express": "4.16.1",
+        "jsonwebtoken": "9.0.0",
         "morgan": "1.9.1",
         "node-fetch": "3.3.0",
+        "nodemon": "2.0.20",
+        "prettier": "2.8.4",
+        "pretty-quick": "3.1.3",
         "swagger-ui-express": "^4.6.0",
         "ts-node": "10.9.1",
-        "jsonwebtoken": "9.0.0",
-        "typescript": "4.9.4",
+        "typescript": "4.9.4"
     }
-  }
+}
