--- a/package.json
+++ b/package.json
@@ -54,13 +54,16 @@
         "cookie-parser": "1.4.4",
         "cors": "2.8.5",
         "express": "4.16.1",
+        "jest": "29.4.3",
         "jsonwebtoken": "9.0.0",
         "morgan": "1.9.1",
         "node-fetch": "3.3.0",
         "nodemon": "2.0.20",
         "prettier": "2.8.4",
         "pretty-quick": "3.1.3",
+        "supertest": "6.3.3",
         "swagger-ui-express": "^4.6.0",
+        "ts-jest": "29.0.5",
         "ts-node": "10.9.1",
         "typescript": "4.9.4"
     }
