--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -1,46 +1,49 @@
 name: pull-request-workflow
 
 on:
-  push:
-    branches-ignore:
-      - master
-
+    push:
+        branches-ignore:
+            - master
 jobs:
-  build:
+    build:
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node-version: [18.13.0]
+        steps:
+            - uses: actions/checkout@v3
+            - name: Cache node modules
+              id: cache-npm
+              uses: actions/cache@v3
+              env:
+                  cache-name: cache-node-modules
+              with:
+                  path: ~/.npm
+                  key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+                  restore-keys: |
+                      ${{ runner.os }}-build-${{ env.cache-name }}-
+                      ${{ runner.os }}-build-
+                      ${{ runner.os }}-
 
-    runs-on: ubuntu-latest
+            - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+              name: List the state of node modules
+              continue-on-error: true
+              run: npm list
 
-    strategy:
-      matrix:
-        node-version: [18.13.0]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Cache node modules
-        id: cache-npm
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+            - uses: actions/setup-node@v3
+              with:
+                  node-version: '18.13.0'
 
-      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        name: List the state of node modules
-        continue-on-error: true
-        run: npm list
-
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.13.0'
-
-      - name: Install dependencies
-        run: npm install
-      - name: Building..
-        run: npm run build --if-present
-      - name: Run tests
-        run: npm run test:coverage
+            - name: Install dependencies
+              run: npm install
+            - name: Run tests
+              run: npm run test:coverage
+            - name: Building..
+              run: npm run build --if-present
+            - name: GitHub Checks
+              uses: LouisBrunner/checks-action@v1.6.0
+              if: always()
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
+                  name: Status
+                  conclusion: ${{ job.status }}
