--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
         "axios": "1.3.3",
         "cookie-parser": "1.4.4",
         "cors": "2.8.5",
-        "debug": "2.6.9",
         "express": "4.16.1",
+        "jsonwebtoken": "9.0.0",
         "morgan": "1.9.1",
         "node-fetch": "3.3.0",
         "swagger-ui-express": "^4.6.0",
@@ -44,20 +44,27 @@
         "@types/cors": "^2.8.13",
         "@types/express": "4.17.15",
         "@types/jest": "29.4.0",
+        "@types/jsonwebtoken": "^9.0.1",
         "@types/morgan": "1.9.4",
         "@types/supertest": "2.0.12",
         "@types/swagger-ui-express": "^4.1.3",
         "@typescript-eslint/eslint-plugin": "5.48.1",
         "@typescript-eslint/parser": "5.48.1",
         "babel-jest": "29.4.3",
-        "eslint": "8.31.0",
-        "husky": "8.0.3",
-        "jest": "29.3.1",
-        "lint-staged": "13.1.0",
+        "cookie-parser": "1.4.4",
+        "cors": "2.8.5",
+        "express": "4.16.1",
+        "jest": "29.4.3",
+        "jsonwebtoken": "9.0.0",
+        "morgan": "1.9.1",
+        "node-fetch": "3.3.0",
         "nodemon": "2.0.20",
-        "prettier": "2.8.2",
+        "prettier": "2.8.4",
         "pretty-quick": "3.1.3",
         "supertest": "6.3.3",
-        "ts-jest": "29.0.5"
+        "swagger-ui-express": "^4.6.0",
+        "ts-jest": "29.0.5",
+        "ts-node": "10.9.1",
+        "typescript": "4.9.4"
     }
 }
