--- a/package.json
+++ b/package.json
@@ -47,14 +47,17 @@
         "@types/morgan": "1.9.4",
         "@types/supertest": "2.0.12",
         "@types/swagger-ui-express": "^4.1.3",
-        "@typescript-eslint/eslint-plugin": "5.48.1",
-        "@typescript-eslint/parser": "5.48.1",
+        "@typescript-eslint/eslint-plugin": "^5.53.0",
+        "@typescript-eslint/parser": "^5.53.0",
         "babel-jest": "29.4.3",
         "cookie-parser": "1.4.4",
         "cors": "2.8.5",
+        "eslint": "^8.34.0",
         "express": "4.16.1",
+        "husky": "8.0.3",
         "jest": "29.4.3",
         "jsonwebtoken": "9.0.0",
+        "lint-staged": "13.1.2",
         "morgan": "1.9.1",
         "node-fetch": "3.3.0",
         "nodemon": "2.0.20",
