--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -36,9 +36,11 @@ jobs:
 
             - name: Install dependencies
               run: npm install
+            - name: Run lint-staged
+              run: npm run lint-staged
             - name: Run tests
               run: npm run test:coverage
-            - name: Building..
+            - name: Building Application
               run: npm run build --if-present
             - name: GitHub Checks
               uses: LouisBrunner/checks-action@v1.6.0
