--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
         "node": "18.13.0",
         "npm": "8.19.3"
     },
+    "type": "module",
     "scripts": {
         "start": "npm run build && node ./dist/src/index.js",
-        "dev": "nodemon index.ts",
+        "dev": "nodemon",
         "build": "tsc",
         "lint": "eslint --ext .ts .",
         "lint:fix": "eslint --ext .ts . --fix",
@@ -16,7 +17,8 @@
         "lint-staged": "lint-staged",
         "test": "jest",
         "test:watch": "jest --watchAll",
-        "test:coverage": "jest --coverage"
+        "test:coverage": "jest --coverage",
+        "docs:generate": "node src/docs/swagger.ts"
     },
     "lint-staged": {
         "**/*.{ts,json,yml}": [
@@ -65,6 +67,7 @@
         "prettier": "2.8.4",
         "pretty-quick": "3.1.3",
         "supertest": "6.3.3",
+        "swagger-autogen": "2.23.1",
         "swagger-ui-express": "^4.6.0",
         "ts-jest": "29.0.5",
         "ts-node": "10.9.1",
