--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es2016",
         "lib": ["es6"],
-        "module": "commonjs",
+        "module": "ES6",
         "resolveJsonModule": true,
         "allowJs": true,
         "outDir": "dist",
@@ -10,6 +10,6 @@
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "noImplicitAny": true,
-        "skipLibCheck": true
+        "moduleResolution": "Node"
     }
 }
