--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "axios": "1.3.3",
         "cookie-parser": "1.4.4",
         "cors": "2.8.5",
+        "dotenv": "16.0.3",
         "express": "4.16.1",
         "jsonwebtoken": "9.0.0",
         "morgan": "1.9.1",
