--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "npm": "8.19.3"
     },
     "scripts": {
-        "start": "npm run build && node ./dist/src/index.js",
-        "dev": "nodemon index.ts",
+        "start": "node ./dist/src/index.js",
+        "dev": "nodemon",
         "build": "tsc",
         "lint": "eslint --ext .ts .",
         "lint:fix": "eslint --ext .ts . --fix",
@@ -16,7 +16,8 @@
         "lint-staged": "lint-staged",
         "test": "jest",
         "test:watch": "jest --watchAll",
-        "test:coverage": "jest --coverage"
+        "test:coverage": "jest --coverage",
+        "docs:generate": "node src/docs/swagger.ts"
     },
     "lint-staged": {
         "**/*.{ts,json,yml}": [
@@ -29,6 +30,7 @@
         "axios": "1.3.3",
         "cookie-parser": "1.4.4",
         "cors": "2.8.5",
+        "dotenv": "16.0.3",
         "express": "4.16.1",
         "jsonwebtoken": "9.0.0",
         "morgan": "1.9.1",
@@ -65,6 +67,7 @@
         "prettier": "2.8.4",
         "pretty-quick": "3.1.3",
         "supertest": "6.3.3",
+        "swagger-autogen": "2.23.1",
         "swagger-ui-express": "^4.6.0",
         "ts-jest": "29.0.5",
         "ts-node": "10.9.1",
