--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "npm": "8.19.3"
     },
     "scripts": {
-        "start": "node ./dist/src/index.js",
+        "start": "node ./build/src/index.js",
         "dev": "nodemon",
         "build": "tsc",
         "lint": "eslint --ext .ts .",
