--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "babel-jest": "29.4.3",
         "cookie-parser": "1.4.4",
         "cors": "2.8.5",
+        "cross-env": "7.0.3",
         "eslint": "^8.34.0",
         "express": "4.16.1",
         "husky": "8.0.3",
